--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -5,14 +5,15 @@
 .games-container {
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, 1fr);
   gap: 10px;
   padding: 0px 100px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .games-container {
     display: flex;
     margin-bottom: 10px;
+    grid-template-columns: 1fr;
   }
 }
